# StockValuator

./: .env.example  .gitignore  README.md  docker-compose.yml  zeabur.toml  zeabur.yaml
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.beat  Dockerfile.worker  README.md  check_yfinance.py  clear_cache.py  clear_db_cache.py  clear_redis_cache.py  environment.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 04590affdc5b_add_finviz_fair_value_columns.py  13d46ed760c8_add_net_debt_to_capital_history.py  18081f792c5a_add_financial_data_and_ai_score_cache_.py  53b9c1da5426_add_pe_history_and_dividend_yield_.py  97cb97f58216_add_dividend_growth_5y_column.py  984ff034c23c_add_missing_fundamental_fields.py  9927ce6d0e21_add_notes_to_trades.py  9931b6117256_add_price_alerts_and_stock_fundamentals_.py  cfa489ca90f7_initial_tables.py  ed1be42da52f_add_missing_fundamental_fields.py  ef4f7d93c4f0_add_notes_to_cash_transactions.py  f8a3c2d1e5b9_add_piotroski_f_score_columns.py
backend/app/: celery_app.py  database.py  main.py  models.py  tasks.py
backend/app/services/: analysis_service.py  finance_api.py  scraper_service.py
backend/celery-beat/: Dockerfile
backend/celery-worker/: Dockerfile
backend/src/: __init__.py  main.py  worker.py
backend/src/api/: deps.py
backend/src/core/: __init__.py  cache.py  celery_app.py  config.py  database.py
backend/src/models/: __init__.py  alerts.py  base.py  cash.py  financial_data.py  trade.py  user.py  watchlist.py
backend/tests/: conftest.py  test_integration.py
celery-beat/: Dockerfile
(+108 files in other folders)
